Updated design of the site
Made the design for the main page and for the register page

--- a/Mist2/common/templates/common/home.html
+++ b/Mist2/common/templates/common/home.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dark Search Bar with Bootstrap</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    </head>
     <div class="container">
         <div class="col-9">
 
@@ -8,16 +14,16 @@
             <form class="w-200 p-4 pb-3 d-flex justify-content-center align-items-center flex-column" method="post">
                 {% csrf_token %}
                 <section class="w-200 p-4 pb-3 d-flex justify-content-center align-items-center flex-column">
-                    <div>
-                        <div class="input-group">
-                            <div class="form-outline">
-                                <input type="search" id="form1" class="form-control"/>
-                                <label class="form-label" for="form1">Search</label>
+                    <div class="container mt-3">
+                        <form class="form-inline">
+                            <div class="input-group">
+                                <input type="text" class="form-control bg-dark text-light border border-light" placeholder="Search"
+                                       aria-label="Search" aria-describedby="search-btn">
+                                <div class="input-group-append border border-light">
+                                    <button class="btn btn-dark" type="button" id="search-btn">M</button>
+                                </div>
                             </div>
-                            <button type="button" class="btn btn-primary">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </div>
+                        </form>
                     </div>
                 </section>
             </form>
