--- a/templates/base.html
+++ b/templates/base.html
@@ -7,17 +7,21 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Mist</title>
+    <link rel="stylesheet"
+          href="{% static 'css/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
             integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
             crossorigin="anonymous"></script>
 
+
 </head>
-<body>
+<body class="body-background">
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
     <!-- Container wrapper -->
     <div class="container-fluid">
         <!-- Toggle button -->
@@ -47,10 +51,10 @@
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Store</a>
+                    <a class="nav-link text-light" href="#">Store</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Support</a>
+                    <a class="nav-link text-light" href="#">Support</a>
                 </li>
 
             </ul>
@@ -105,15 +109,18 @@
                     </ul>
                 </div>
             {% else %}
-                <div>
-                    <div class="nav-item">
+                <!-- Link to Register Page -->
+                <div class="nav-item" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="{% url 'register' %}">
+                                Register
+                            </a>
+                        </li>
+                    </ul>
 
-                        <!-- Link to Register Page -->
-                        <a href="{% url 'register' %}">
-                            <i>Register</i>
-                        </a>
-                    </div>
                 </div>
+
             {% endif %}
 
         </div>
@@ -126,13 +133,16 @@
 {% block content %}
 {% endblock %}
 
+
 <footer>
-<div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2023 Copyright:
-    <a class="text-reset fw-bold" href="/">Mist
-    </a>
-</div>
-<!-- Copyright -->
+    <nav class="navbar fixed-bottom navbar-expand  navbar-dark">
+        <div class="text-center p-4 text-light">
+            © 2023 Copyright:
+            <a class="text-reset fw-bold" href="/">Mist
+            </a>
+        </div>
+    </nav>
+    <!-- Copyright -->
 </footer>
 
 </body>
