--- a/Mist2/accounts/templates/accounts/register-page.html
+++ b/Mist2/accounts/templates/accounts/register-page.html
@@ -6,7 +6,7 @@
 
     <!-- Start Register Section -->
     <div class="login-register-div">
-        <div class="login-register-box">
+        <div class="login-register-box text-light">
             <h1>Mist</h1>
 
             <!-- Start Register Form -->
