--- a/templates/base.html
+++ b/templates/base.html
@@ -96,10 +96,13 @@
 
 
                         <li>
-                            <a class="dropdown-item" href="#">Profile</a>
+                            <a class="dropdown-item" href="{% url 'create_game' %}">Add you Game</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">Logout</a>
+                            <a class="dropdown-item" href="#">Library</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                         </li>
 
                     </ul>
@@ -113,8 +116,8 @@
                                 Register
                             </a>
                         </li>
-                         <li>
-                            <a class="dropdown-item" href="{% url 'login' %}">
+                         <li class="nav-item">
+                            <a class="nav-link text-light" href="{% url 'login' %}">
                                 <i>Login</i>
                             </a>
                         </li>
