--- a/Mist2/accounts/templates/accounts/login-page.html
+++ b/Mist2/accounts/templates/accounts/login-page.html
@@ -7,7 +7,7 @@
     <!-- Start Login Section-->
     <div class="login-register-div">
         <div class="login-register-box">
-            <h1>Mist</h1>
+            <h1 class="font-weight-bold text-light">Mist</h1>
 
             <!-- Start Login Form-->
             <form action="{% url 'login' %}" method="POST">
@@ -26,7 +26,7 @@
         <div class="second-option">
 
             <!-- Link to Register Page-->
-            <p>Don't have account? <a href="{% url 'register' %}?next={{ next }}">Register</a></p>
+            <p class="text-light">Don't have account? <a href="{% url 'register' %}?next={{ next }}">Register</a></p>
         </div>
     </div>
     <!-- End Login Section-->
