--- a/Mist2/accounts/templates/accounts/register-page.html
+++ b/Mist2/accounts/templates/accounts/register-page.html
@@ -39,7 +39,7 @@
         <div class="second-option">
 
             <!-- Link to Login Page -->
-            <p>Have an account? <a href="#">Log in</a></p>
+            <p class="text-light">Have an account? <a href="{% url 'login' %}">Log in</a></p>
         </div>
     </div>
     <!-- End Register Section -->
