--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
                             aria-expanded="false"
                     >
                         <img
-                                src="{% static 'images/default-avatar-icon-of-social-media-user-vector.jpg' %}"
+                                src="{% static 'images/def_user_photo.jpg' %}"
                                 class="rounded-circle"
                                 height="25"
                                 alt="Black and White Portrait of a Man"
