--- a/Mist2/common/templates/common/games.html
+++ b/Mist2/common/templates/common/games.html
@@ -1,15 +1,19 @@
 {% load static %}
 
-    <div class="d-flex">
-        {% for game in games %}
-    <div class="card m-3" style="width:250px">
-    <img class="card-img-top" src="{{ game.game_photo.url }}" alt="Card image">
-    <div class="card-body">
-        <h4 class="card-title">{{ game.name }}</h4>
-        <p class="card-text">{{ game.description }}</p>
-        <a href="#" class="btn btn-primary">Details</a>
-    </div>
-    </div>
-        {% endfor %}
-    </div>
+<div class="d-flex">
+    {% for game in games %}
+        <div class="card m-3" style="width:250px">
+            {% if game.game_photo %}
+            <img class="card-img-top" src="{{ game.game_photo }}" alt="Card image">
+            {% else %}
+            <img class="card-img-top" src="{% static 'images/def_photo_game.jpg' %}" alt="Card image">
+            {% endif %}
+            <div class="card-body">
+                <h4 class="card-title">{{ game.name }}</h4>
+                <p class="card-text">{{ game.description }}</p>
+                <a href="#" class="btn btn-primary">Details</a>
+            </div>
+        </div>
+    {% endfor %}
+</div>
 
