--- a/templates/base.html
+++ b/templates/base.html
@@ -72,6 +72,25 @@
 
             <!-- Avatar -->
               {% if request.user.is_authenticated %}
+                  {% if request.resolver_match.view_name == 'details_game' %}
+                      {# TODO: Add that when the creator of the game is visiting the page the buttons are visable #}
+                <div class="nav-item mr-3 ml-3" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">
+                                Edit game
+                            </a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-danger" href="#">
+                                Delete game
+                            </a>
+                        </li>
+                    </ul>
+
+
+                </div>
+                {% endif %}
                 <div class="dropdown">
                     <a
                             class="dropdown-toggle d-flex align-items-center hidden-arrow"
@@ -107,7 +126,8 @@
 
                     </ul>
                 </div>
-            {% else %}
+
+            {% elif not request.user.is_authenticated %}
                 <!-- Link to Register Page -->
                 <div class="nav-item" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -125,6 +145,8 @@
 
 
                 </div>
+
+
 
             {% endif %}
 
