--- a/Mist2/games/templates/games/game_details.html
+++ b/Mist2/games/templates/games/game_details.html
@@ -1,23 +1,28 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
-    <h1>{{ game.name }}</h1>
-    <img src="{{ game.game_photo.url }}" alt="{{ game.name }} Photo">
-    <p><strong>Genre:</strong> {{ game.get_genre_display }}</p>
-    <p><strong>Release Date:</strong> {{ game.release_date }}</p>
-    <p><strong>Size:</strong> {{ game.size }} MB</p>
-    <p><strong>Price:</strong> ${{ game.price }}</p>
+    <h1 class="text-light">{{ game.name }}</h1>
+    {% if game.game_photo %}
+    <img class="img-thumbnail" style="width: 300px; height: 200px;"  src="{{ game.game_photo.url }}" alt="{{ game.name }} Photo">
+    {% else %}
+         <img class="img-thumbnail" style="width: 300px; height: 200px;" src="{% static 'images/def_photo_game.jpg' %}" alt="Card image">
+    {% endif %}
+    <p class="text-light"><strong>Genre:</strong> {{ game.get_genre_display }}</p>
+    <p class="text-light"><strong>Release Date:</strong> {{ game.release_date|date:"d-m-Y" }}</p>
+    <p class="text-light"><strong>Size:</strong> {{ game.size }} MB</p>
+    <p class="text-light"><strong>Price:</strong> {{ game.price }}$</p>
 
     {% if game.description %}
-        <h2>Description:</h2>
-        <p>{{ game.description }}</p>
+        <h2 class="text-light">Description:</h2>
+        <p class="text-light"> {{ game.description }}</p>
     {% endif %}
 
     <!-- Add any other details you want to display about the game -->
 
     <!-- You can also include user-specific actions if the user is logged in -->
     {% if user.is_authenticated %}
-        <a href="#">Add to Wishlist</a>
-        <a href="#">Buy Now</a>
+        <a class="btn btn-info btn-sm btn-outline-danger" href="#">Add to Wishlist</a>
+        <a class="btn btn-info btn-sm btn-outline-danger" href="#">Buy Now</a>
     {% else %}
         <p>Please log in to perform actions.</p>
     {% endif %}
