--- a/Mist2/games/templates/games/game_details.html
+++ b/Mist2/games/templates/games/game_details.html
@@ -1,16 +1,39 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block right_nav %}
+    {% if request.resolver_match.view_name == 'details_game' %}
+        {% if game.user == request.user %}
+            <div class="nav-item mr-3 ml-3" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="{% url 'edit_game' game.pk %}">
+                            Edit game
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="{% url 'delete_game' game.pk %}">
+                            Delete game
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        {% endif %}
+    {% endif %}
+{% endblock %}
 {% block content %}
     <h1 class="text-light">{{ game.name }}</h1>
     {% if game.game_photo %}
-    <img class="img-thumbnail" style="width: 300px; height: 200px;"  src="{{ game.game_photo.url }}" alt="{{ game.name }} Photo">
+        <img class="img-thumbnail" style="width: 300px; height: 200px;" src="{{ game.game_photo.url }}"
+             alt="{{ game.name }} Photo">
     {% else %}
-         <img class="img-thumbnail" style="width: 300px; height: 200px;" src="{% static 'images/def_photo_game.jpg' %}" alt="Card image">
+        <img class="img-thumbnail" style="width: 300px; height: 200px;" src="{% static 'images/def_photo_game.jpg' %}"
+             alt="Card image">
     {% endif %}
     <p class="text-light"><strong>Genre:</strong> {{ game.get_genre_display }}</p>
     <p class="text-light"><strong>Release Date:</strong> {{ game.release_date|date:"d-m-Y" }}</p>
     <p class="text-light"><strong>Size:</strong> {{ game.size }} MB</p>
     <p class="text-light"><strong>Price:</strong> {{ game.price }}$</p>
+
 
     {% if game.description %}
         <h2 class="text-light">Description:</h2>
