--- a/Mist2/games/templates/games/game_details.html
+++ b/Mist2/games/templates/games/game_details.html
@@ -3,7 +3,7 @@
 {% block right_nav %}
     {% if request.resolver_match.view_name == 'details_game' %}
         {% if game.user == request.user %}
-            <div class="nav-item mr-3 ml-3" id="navbarSupportedContent">
+            <div class="nav-item" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link text-light" href="{% url 'edit_game' game.pk %}">
@@ -21,6 +21,7 @@
     {% endif %}
 {% endblock %}
 {% block content %}
+    <div class="m-3">
     <h1 class="text-light">{{ game.name }}</h1>
     {% if game.game_photo %}
         <img class="img-thumbnail" style="width: 300px; height: 200px;" src="{{ game.game_photo.url }}"
@@ -44,9 +45,9 @@
 
     <!-- You can also include user-specific actions if the user is logged in -->
     {% if user.is_authenticated %}
-        <a class="btn btn-info btn-sm btn-outline-danger" href="#">Add to Wishlist</a>
-        <a class="btn btn-info btn-sm btn-outline-danger" href="#">Buy Now</a>
+        <a href="{% url 'add_to_library' game.pk %}" class="btn btn-primary">Add to Library</a>
     {% else %}
         <p>Please log in to perform actions.</p>
     {% endif %}
+    </div>
 {% endblock %}
