--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Store</a>
+                    <a class="nav-link text-light" href="/">Store</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#">Support</a>
@@ -98,13 +98,13 @@
                                 aria-labelledby="navbarDropdownMenuAvatar"
                         >
                             <li>
-                                <p class="ml-3"> <strong>Hello</strong>, {{ request.user }}</p>
+                                <p class="ml-3"> <strong>Hello</strong>, <a href="{% url 'profile-details' pk=request.user.pk %}">{{ request.user }}</a></p>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="{% url 'create_game' %}">Add you Game</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">Library</a>
+                                <a class="dropdown-item" href="{% url 'library' %}">Library</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
