--- a/Mist2/games/templates/games/game_details.html
+++ b/Mist2/games/templates/games/game_details.html
@@ -22,32 +22,57 @@
 {% endblock %}
 {% block content %}
     <div class="m-3">
-    <h1 class="text-light">{{ game.name }}</h1>
-    {% if game.game_photo %}
-        <img class="img-thumbnail" style="width: 300px; height: 200px;" src="{{ game.game_photo.url }}"
-             alt="{{ game.name }} Photo">
-    {% else %}
-        <img class="img-thumbnail" style="width: 300px; height: 200px;" src="{% static 'images/def_photo_game.jpg' %}"
-             alt="Card image">
-    {% endif %}
-    <p class="text-light"><strong>Genre:</strong> {{ game.get_genre_display }}</p>
-    <p class="text-light"><strong>Release Date:</strong> {{ game.release_date|date:"d-m-Y" }}</p>
-    <p class="text-light"><strong>Size:</strong> {{ game.size }} MB</p>
-    <p class="text-light"><strong>Price:</strong> {{ game.price }}$</p>
+        <h1 class="text-light">{{ game.name }}</h1>
+        {% if game.game_photo %}
+            <img class="img-thumbnail" style="width: 300px; height: 200px;" src="{{ game.game_photo.url }}"
+                 alt="{{ game.name }} Photo">
+        {% else %}
+            <img class="img-thumbnail" style="width: 300px; height: 200px;"
+                 src="{% static 'images/def_photo_game.jpg' %}"
+                 alt="Card image">
+        {% endif %}
+        <p class="text-light"><strong>Genre:</strong> {{ game.get_genre_display }}</p>
+        <p class="text-light"><strong>Release Date:</strong> {{ game.release_date|date:"d-m-Y" }}</p>
+        <p class="text-light"><strong>Size:</strong> {{ game.size }} MB</p>
+        <p class="text-light"><strong>Price:</strong> {{ game.price }}$</p>
 
 
-    {% if game.description %}
-        <h2 class="text-light">Description:</h2>
-        <p class="text-light"> {{ game.description }}</p>
-    {% endif %}
+        {% if game.description %}
+            <h2 class="text-light">Description:</h2>
+            <p class="text-light"> {{ game.description }}</p>
+        {% endif %}
+        <p class="card-text ml-5"><strong>Likes: {{ game.like_count }}</strong></p>
 
-    <!-- Add any other details you want to display about the game -->
+        <!-- Like Button -->
+        <form method="post" action="{% url 'like_game' game.pk %}">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-sm btn-primary mt-2">Like</button>
+        </form>
 
-    <!-- You can also include user-specific actions if the user is logged in -->
-    {% if user.is_authenticated %}
-        <a href="{% url 'add_to_library' game.pk %}" class="btn btn-primary">Add to Library</a>
-    {% else %}
-        <p>Please log in to perform actions.</p>
-    {% endif %}
+        <!-- Comment Form -->
+        <form method="post" action="{% url 'comment_game' game.pk %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <textarea class="form-control" name="comment_text" placeholder="Write a comment"></textarea>
+            </div>
+            <button type="submit" class="btn btn-sm btn-success">Comment</button>
+        </form>
+
+        <ul class="list-group mt-2">
+            {% for comment in game.comments.all %}
+                <li class="list-group-item">{{ comment.comment_text }}</li>
+                <!-- Use comment.comment_text instead of comment.text -->
+            {% empty %}
+                <li class="list-group-item">No comments yet.</li>
+            {% endfor %}
+        </ul>
+
+        {% if user.is_authenticated %}
+            <a href="{% url 'add_to_library' game.pk %}" class="btn btn-primary">Add to Library</a>
+        {% else %}
+            <p class="text-danger">Please log in to be able to add the game to your library.</p>
+        {% endif %}
     </div>
+
+
 {% endblock %}
