--- a/Mist2/accounts/templates/accounts/profile-details-page.html
+++ b/Mist2/accounts/templates/accounts/profile-details-page.html
@@ -21,7 +21,7 @@
         <p class="text-light ml-2"><strong>Email:</strong> {{ user.email }} </p>
     </div>
     <a class="nav-link text-light" href="{% url 'profile-edit' user.pk %}">
-        Edit game
+        Edit profile
     </a>
 
 
