--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 
 
 </head>
-<body class="body-background">
+<body class="body-background pb-3">
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
     <!-- Container wrapper -->
@@ -93,24 +93,25 @@
                     </a>
 
 
-                        <ul
-                                class="dropdown-menu dropdown-menu-end"
-                                aria-labelledby="navbarDropdownMenuAvatar"
-                        >
-                            <li>
-                                <p class="ml-3"> <strong>Hello</strong>, <a href="{% url 'profile-details' pk=request.user.pk %}">{{ request.user }}</a></p>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="{% url 'create_game' %}">Add you Game</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="{% url 'library' %}">Library</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-                            </li>
+                    <ul
+                            class="dropdown-menu dropdown-menu-end"
+                            aria-labelledby="navbarDropdownMenuAvatar"
+                    >
+                        <li>
+                            <p class="ml-3"><strong>Hello</strong>, <a
+                                    href="{% url 'profile-details' pk=request.user.pk %}">{{ request.user }}</a></p>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="{% url 'create_game' %}">Add you Game</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="{% url 'library' %}">Library</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                        </li>
 
-                        </ul>
+                    </ul>
 
                 </div>
 
@@ -146,16 +147,17 @@
 {% endblock %}
 
 
-<footer >
-    <nav class="navbar fixed-bottom navbar-expand  navbar-dark">
-        <div class="text-center p-4 text-light">
+
+<footer class="footer">
+    <div id="main" class="container clear-top">
+        <div class="text-center text-light p-3">
             © 2023 Copyright:
-            <a class="text-reset fw-bold" href="/">Mist
-            </a>
+            <a class="text-white" href="{% url 'home' %}">Mist2</a>
         </div>
-    </nav>
-    <!-- Copyright -->
+    </div>
 </footer>
+
 
 </body>
 </html>
+
