--- a/Mist2/games/templates/games/game_details.html
+++ b/Mist2/games/templates/games/game_details.html
@@ -22,56 +22,155 @@
 {% endblock %}
 {% block content %}
     <div class="m-3">
-        <h1 class="text-light">{{ game.name }}</h1>
-        {% if game.game_photo %}
-            <img class="img-thumbnail" style="width: 300px; height: 200px;" src="{{ game.game_photo.url }}"
-                 alt="{{ game.name }} Photo">
-        {% else %}
-            <img class="img-thumbnail" style="width: 300px; height: 200px;"
-                 src="{% static 'images/def_photo_game.jpg' %}"
-                 alt="Card image">
-        {% endif %}
-        <p class="text-light"><strong>Genre:</strong> {{ game.get_genre_display }}</p>
-        <p class="text-light"><strong>Release Date:</strong> {{ game.release_date|date:"d-m-Y" }}</p>
-        <p class="text-light"><strong>Size:</strong> {{ game.size }} MB</p>
-        <p class="text-light"><strong>Price:</strong> {{ game.price }}$</p>
+        <div></div>
+        <div class="row d-flex justify-content-center">
+            <h1 class="text-light text-center">{{ game.name }}</h1>
+            {% if game.game_photo %}
+                <img class="img-thumbnail" style="width: 300px; height: 200px;" src="{{ game.game_photo.url }}"
+                     alt="{{ game.name }} Photo">
+            {% else %}
+                <img class="img-thumbnail" style="width: 300px; height: 200px;"
+                     src="{% static 'images/def_photo_game.jpg' %}"
+                     alt="Card image">
+            {% endif %}
+            <p class="text-light text-center"><strong>Genre:</strong> {{ game.get_genre_display }}</p>
+            <p class="text-light text-center"><strong>Release Date:</strong> {{ game.release_date|date:"d-m-Y" }}</p>
+            <p class="text-light text-center"><strong>Size:</strong> {{ game.size }} MB</p>
+            <p class="text-light text-center"><strong>Price:</strong> {{ game.price }}$</p>
 
 
-        {% if game.description %}
-            <h2 class="text-light">Description:</h2>
-            <p class="text-light"> {{ game.description }}</p>
-        {% endif %}
-        <p class="card-text ml-5"><strong>Likes: {{ game.like_count }}</strong></p>
+            {% if game.description %}
+                <h2 class="text-light text-center">Description:</h2>
+                <p class="text-light text-center"> {{ game.description }}</p>
+            {% endif %}
+            <p class="card-text ml-5 text-center text-warning"><strong>Likes: {{ game.like_count }}</strong></p>
+        </div>
 
-        <!-- Like Button -->
-        <form method="post" action="{% url 'like_game' game.pk %}">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-sm btn-primary mt-2">Like</button>
-        </form>
+        <div class="d-flex justify-content-center align-items-center flex-column">
+            <div class="mb-2">
+                <form method="post" action="{% url 'like_game' game.pk %}">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-sm btn-primary m-1">Like</button>
+                </form>
+            </div>
+            <div class="text-center">
+                {% if user.is_authenticated %}
+                    {% if is_in_library %}
+                        <p class="text-success">You already have this game in your library.</p>
+                    {% else %}
+                        <a href="{% url 'add_to_library' game.pk %}" class="btn btn-primary">Add to Library</a>
+                    {% endif %}
+                {% else %}
+                    <p class="text-danger">Please log in to be able to add the game to your library.</p>
+                {% endif %}
+            </div>
+        </div>
 
-        <!-- Comment Form -->
         <form method="post" action="{% url 'comment_game' game.pk %}">
             {% csrf_token %}
-            <div class="form-group">
-                <textarea class="form-control" name="comment_text" placeholder="Write a comment"></textarea>
-            </div>
-            <button type="submit" class="btn btn-sm btn-success">Comment</button>
+            <section style="background-color: #212529;">
+                <div class="container my-5 py-5 text-dark">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-md-10 col-lg-8 col-xl-6">
+                            <div class="card">
+                                <div class="card-body p-4">
+                                    <div class="d-flex flex-start w-100">
+                                        <img class="rounded-circle shadow-1-strong me-3"
+                                             src="
+
+
+
+                                                     {% if user.profile_picture %}{{ user.profile_picture.url }}{% else %}{% static 'images/def_user_photo.jpg' %}{% endif %}"
+                                             alt="avatar"
+                                             width="65"
+                                             height="65"/>
+                                        <div class="w-100">
+                                            <h5>Add a comment</h5>
+                                            <div class="form-outline">
+                                                <textarea class="form-control" id="textAreaExample" rows="4"
+                                                          name="comment_text"></textarea>
+                                                <label class="form-label" for="textAreaExample">What is your
+                                                    view?</label>
+
+                                            </div>
+                                            <div class="d-flex justify-content-between mt-3">
+                                                <button type="submit" class="btn btn-sm btn-success">Comment</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </form>
 
+
         <ul class="list-group mt-2">
-            {% for comment in game.comments.all %}
-                <li class="list-group-item">{{ comment.comment_text }}</li>
-                <!-- Use comment.comment_text instead of comment.text -->
-            {% empty %}
+            {% if not game.comments.all %}
                 <li class="list-group-item">No comments yet.</li>
-            {% endfor %}
+            {% else %}
+                {% for comment in game.comments.all %}
+                    {% if comment.user == request.user %}
+                        <li class="list-group-item d-flex justify-content-between">
+                            {% if comment.user.profile_picture %}
+                                <div>
+                                    <img class="rounded-circle shadow-1-strong me-3"
+                                         src="{{ comment.user.profile_picture.url }}"
+                                         alt="avatar"
+                                         width="35"
+                                         height="35"/>{{ comment.comment_text }}
+                                </div>
+                                <div>
+                                    <form method="post" action="{% url 'remove_comment' comment.id %}">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                                    </form>
+
+                                </div>
+                            {% else %}
+                                <img class="rounded-circle shadow-1-strong me-3"
+                                     src="{% static 'images/def_user_photo.jpg' %}"
+                                     alt="avatar"
+                                     width="35"
+                                     height="35"/>{{ comment.comment_text }}
+                                <form method="post" action="{% url 'remove_comment' comment.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                                </form>
+
+                                </li>
+                            {% endif %}
+                    {% else %}
+                        <li class="list-group-item">
+                            {% if comment.user.profile_picture %}
+                                <img class="rounded-circle shadow-1-strong me-3"
+
+
+                                     src="{{ comment.user.profile_picture.url }}"
+                                     alt="avatar"
+                                     width="35"
+                                     height="35"/>{{ comment.comment_text }}
+
+                            {% else %}
+                                <img class="rounded-circle shadow-1-strong me-3"
+                                     src="{% static 'images/def_user_photo.jpg' %}"
+                                     alt="avatar"
+                                     width="35"
+                                     height="35"/>{{ comment.comment_text }}
+
+                                </li>
+                            {% endif %}
+                    {% endif %}
+                    <!-- Use comment.comment_text instead of comment.text -->
+
+                {% endfor %}
+            {% endif %}
+
         </ul>
 
-        {% if user.is_authenticated %}
-            <a href="{% url 'add_to_library' game.pk %}" class="btn btn-primary">Add to Library</a>
-        {% else %}
-            <p class="text-danger">Please log in to be able to add the game to your library.</p>
-        {% endif %}
+
     </div>
 
 
