--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -19,3 +19,17 @@
 
 
 }
+
+html, body {
+  height: 100%;
+}
+
+#wrap {
+  min-height: 100%;
+}
+
+#main {
+  overflow:auto;
+  padding-bottom:150px; /* this needs to be bigger than footer height*/
+}
+
