--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@
 
 </head>
 <body class="body-background pb-3">
-<!-- Navbar -->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-    <!-- Container wrapper -->
+
     <div class="container-fluid">
-        <!-- Toggle button -->
+
         <button
                 class="navbar-toggler"
                 type="button"
@@ -37,18 +37,18 @@
             <i class="fas fa-bars"></i>
         </button>
 
-        <!-- Collapsible wrapper -->
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Navbar brand -->
+
             <a class="navbar-brand mt-2 mt-lg-0" href="/">
                 <img
                         src="{% static 'images/mist-logo.png' %}"
                         height="50"
-                        alt="MDB Logo"
+                        alt="Mist2 Logo"
                         loading="lazy"
                 />
             </a>
-            <!-- Left links -->
+
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link text-light" href="/">Store</a>
@@ -58,11 +58,9 @@
                 </li>
 
             </ul>
-            <!-- Left links -->
-        </div>
-        <!-- Collapsible wrapper -->
 
-        <!-- Right elements -->
+        </div>
+
 
         <div class="d-flex align-items-center">
             <!-- Icon -->
@@ -137,11 +135,11 @@
 
 
         </div>
-        <!-- Right elements -->
+
     </div>
-    <!-- Container wrapper -->
+
 </nav>
-<!-- Navbar -->
+
 
 {% block content %}
 {% endblock %}
